# fastack

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: check.yml  codecov.yml  pypi-publish.yml
docs/: contributing.md  deployment.md  index.md  installation.md  plugins.md  support.md
docs/api/fastack/: __init__.md  app.md  cli.md  constants.md  context.md  controller.md  decorators.md  local.md  mixins.md  models.md  pagination.md  utils.md
docs/api/fastack/middleware/: __init__.md  base.md  state.md
docs/deployment/: docker.md  heroku.md
docs/tutorial/: cli.md  context.md  controller.md  create_project.md  globalvariables.md  introduction.md  middleware.md  plugins.md
examples/helloworld/: Dockerfile  Pipfile
examples/helloworld/app/: main.py
examples/helloworld/app/commands/: user.py
examples/helloworld/app/controllers/: __init__.py
examples/helloworld/app/controllers/helloworld/: __init__.py  models.py
examples/helloworld/app/plugins/: globalvar.py  logger.py
examples/helloworld/app/settings/: local.py
examples/mongodb/: Pipfile  README.md  docker-compose.yml
examples/mongodb/app/: main.py  models.py
examples/mongodb/app/commands/: user.py
examples/mongodb/app/controllers/: __init__.py
examples/mongodb/app/controllers/book/: __init__.py
examples/mongodb/app/settings/: __init__.py  local.py  production.py
examples/sqlmodel/: Dockerfile  Pipfile  README.md  docker-compose.yml
examples/sqlmodel/app/: models.py
examples/sqlmodel/app/commands/: book.py
examples/sqlmodel/app/controllers/book/: __init__.py
examples/sqlmodel/app/settings/: local.py  production.py
fastack/: __init__.py  __main__.py  app.py  cli.py  constants.py  context.py  controller.py  decorators.py  generator.py  globals.py  local.py  middleware.py  mixins.py  models.py  pagination.py  utils.py
fastack/middleware/: __init__.py  base.py  state.py
fastack/plugins/aioredis/: __init__.py
fastack/plugins/mongoengine/: __init__.py  base.py
fastack/plugins/sqlmodel/: __init__.py  base.py  helpers.py  session.py
fastack/templates/: .pre-commit-config.yaml  Pipfile  docker-compose.yml  entrypoint.sh
fastack/templates/app/controllers/: __init__.py
fastack/templates/app/controllers/dummy/: __init__.py
fastack/templates/app/settings/: local.py
scripts/: docs.py  test.sh
tests/: __init__.py  conftest.py  test_cli.py  test_controller.py  test_ctx.py  test_error_handler.py  test_middleware.py  test_pagination.py  test_plugin.py  test_utils.py
tests/app/controllers/: __init__.py
tests/app/settings/: local.py
tests/resources/: command.py  controllers.py  middleware.py  models.py  plugin.py
tests/settings/: __init__.py  local.py
