[tool.poetry]
name = "fastack"
version = "2.0.0"
description = "Fastack is a blah blah blah framework!!!"
authors = ["aprilahijriyan <37798612+aprilahijriyan@users.noreply.github.com>"]
license = "MIT"
maintainers = ["aprilahijriyan <37798612+aprilahijriyan@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/fastack-dev/fastack"
repository = "https://github.com/fastack-dev/fastack"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
fastapi = "^0.70.1"
typer = {extras = ["all"], version = "^0.4.0"}
sqlmodel = {version = "^0.0.5", optional = true}
aioredis = {version = "^2.0.0", optional = true}
mongoengine = {version = "^0.23.1", optional = true}
uvicorn = "^0.16.0"
asgi-lifespan = "^1.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
pre-commit = "^2.16.0"
ipython = "^7.30.1"

[tool.poetry.extras]

sql = ["sqlmodel"]
nosql = ["mongoengine"]
redis = ["aioredis"]

[tool.poetry.scripts]

fastack = "fastack.cli:fastack"

[tool.poetry.urls]

"Bug Tracker" = "https://github.com/fastack-dev/fastack/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
